--- a/stylesheets/_entries.scss
+++ b/stylesheets/_entries.scss
@@ -3,7 +3,8 @@
 
 // This is outside of the .hentry wrapper so it does’t override selectors in blocks.css
 .entry-content,
-.entry-summary {
+.entry-summary,
+.page-content {
 
 	// Style all elemnts first
 	> * {
@@ -72,8 +73,8 @@
 			// Single Page
 			&:first-child:last-child {
 				max-width: $x-grid-column-7;
-				margin-right: auto; //$x-space-column-3;
-			 	margin-left: auto;
+				margin-left: auto;
+				margin-right: auto;
 			}
 		}
 	}
@@ -83,6 +84,11 @@
 			font-size: $x-font-size-xxxl;
 			margin: $x-space-lg auto $x-space-md;
 		}
+	}
+
+	@at-root body.page .entry-title {
+			font-size: $x-font-size-xxxl;
+			margin: $x-space-lg auto $x-space-md;		
 	}
 
 	.entry-meta {
