--- a/stylesheets/_layout.scss
+++ b/stylesheets/_layout.scss
@@ -5,13 +5,13 @@
 	width: 100%;
 }
 
-.site-main {
+/*.site-main {
 
 	> *:first-child:not(.hentry),
 	.single & > .hentry.has-post-thumbnail:first-child {
 		margin-top: 0;
 	}
-}
+}*/
 
 #page-wrapper {
 
