Fix theme build error.

--- a/stylesheets/_wordpress.scss
+++ b/stylesheets/_wordpress.scss
@@ -257,7 +257,7 @@
 		justify-content: flex-end;
 
 		.avatar {
-			/*margin-left: $x-space-gutter;*/
+			// margin-left: $x-space-gutter;
 			margin-right: $x-space-xs;
 		}
 	}
