--- a/style.scss
+++ b/style.scss
@@ -1,5 +1,5 @@
 /*!
-Theme Name: Default Small Business Theme
+Theme Name: Business
 Theme URI: https://github.com/Automattic/default-small-business-theme
 Author: Automattic
 Author URI: https://automattic.com
