--- a/style.scss
+++ b/style.scss
@@ -4,7 +4,7 @@ Theme URI: https://github.com/Automattic/default-small-business-theme
 Author: Automattic
 Author URI: https://automattic.com
 Description: Gutenberg-ready small business theme for WordPress.com
-Version: 1.0.0
+Version: 1.0.0-wpcom
 License: GNU General Public License v2 or later
 License URI: https://www.gnu.org/licenses/gpl-2.0.html
 Text Domain: smallbusinesstheme
