--- a/stylesheets/_wordpress.scss
+++ b/stylesheets/_wordpress.scss
@@ -239,10 +239,12 @@
 	}
 
 	cite {
+		color: $x-color-secondary-base;
 		margin-bottom: $x-space-xs;
 		font-family: $x-font-family-heading;
 		font-size: $x-font-size-sm;
 		font-style: normal;
+		font-weight: 700;
 		text-transform: uppercase;
 		width: 100%;
 
