--- a/stylesheets/_wordpress.scss
+++ b/stylesheets/_wordpress.scss
@@ -55,6 +55,8 @@
 
 		.archive-description {
 			font-size: $x-font-size-sm;
+			margin-left: $x-space-sm;
+			margin-right: $x-space-sm;
 			max-width: $x-grid-column-7;
 			width: 100%;
 		}
