--- a/css/blocks.scss
+++ b/css/blocks.scss
@@ -340,7 +340,7 @@ table.wp-block-table {
 
 .wp-block-quote {
 
-	padding: $x-space-sm 0 !important;
+	//padding: $x-space-sm 0 !important;
 	margin-top: $x-space-lg;
 	margin-bottom: $x-space-lg;
 	
@@ -351,7 +351,8 @@ table.wp-block-table {
 		width: 100%;
 	}
 
-	p {
+	p {	
+		margin: 0; 
 		padding: $x-space-xs $x-space-sm;
 		font-size: $x-font-size-base;
 	}
@@ -386,8 +387,9 @@ table.wp-block-table {
 	text-align: inherit;
 	padding: 0;
 	
-	& > p {
-		font-size: $x-font-size-lg;
+	p {
+		margin: 0; 
+		font-size: $x-font-size-md;
 	}
 
 	&.is-large p,
@@ -426,7 +428,6 @@ table.wp-block-table {
 			margin-top: 0;
 			margin-bottom: 0;
 			p {
-				font-size: $x-font-size-md;
 				padding-top: 0;
 			}
 		}
