Round of mobile fixes.

--- a/stylesheets/_entries.scss
+++ b/stylesheets/_entries.scss
@@ -1,40 +1,47 @@
 
 /** === Entries === */
 
-#page {
-	padding: 0 1em;
-}
-
 // This is outside of the .hentry wrapper so it does’t override selectors in blocks.css
 .entry-content,
 .entry-summary,
 .page-content {
 
+	// Style all elemnts first
+	> * {
+		margin: $x-space-sm;
+		max-width: calc( 100% - ( #{$x-space-sm} * 2 ) );
+
+		&:first-child {
+			margin-top: 0;
+		}
+
+		@include media( tablet ) {
+			max-width: $x-grid-column-7;
+			margin-right: auto;
+			margin-left: auto;
+		}
+	}
 }
 
-.has-post-thumbnail.hentry {
+.infinite-wrap .hentry:first-child,
+.single &.has-post-thumbnail:first-child,
+.page .has-post-thumbnail.hentry {
 	margin-top: 0;
 }
 
 .hentry {
-	max-width: $x-grid-column-8;
-	
-	#page & {
-		margin-left: auto;
-		margin-right: auto;
-	}
-	
+	margin: $x-space-lg 0;
+
 	@include media( tablet ) {
-		margin: $x-space-xl auto;
+		margin: $x-space-xl, $x-space-sm;
 	}
 
 	@include media( desktop ) {
-		margin: $x-space-lg auto;
+		margin: $x-space-lg 0;
 
 		&:first-child {
-			margin-top: $x-space-xl;
+			margin-top: $x-space-xxl;
 		}
-
 	}
 
 	.entry-featured-image {
@@ -59,7 +66,7 @@
 	}
 
 	.entry-title {
-		margin: $x-space-sm auto;
+		margin: $x-space-sm;
 		font-weight: 800;
 
 		a {
@@ -95,8 +102,10 @@
 	}
 
 	@at-root body.page .entry-title {
+		@include media( tablet ) { 
 			font-size: $x-font-size-xxxl;
-			margin: $x-space-lg auto $x-space-md;		
+			margin: $x-space-lg auto $x-space-md;
+		}
 	}
 
 	.entry-meta {
@@ -125,7 +134,7 @@
 	.entry-footer {
 
 		.entry-meta {
-
+			display: flex;
 			line-height: $x-font-leading-double;
 			flex-direction: column;
 			justify-content: space-between;
@@ -153,7 +162,6 @@
 
 		@include media( tablet ) {
 			max-width: $x-grid-column-12;
-			display: flex;
 			justify-content: flex-end;
 			margin-left: auto;
 			margin-right: auto;
@@ -196,6 +204,7 @@
 					display: block;
 					width: 100%;
 					height: 100%;
+					background: green;
 					z-index: 10;
 				}
 			}
@@ -265,14 +274,13 @@
 	.entry-author {
 		border-top: 1px solid grey;
 		border-color: $x-color-border-base;
-		margin: $x-space-md;
+		margin: $x-space-sm;
 		padding-top: $x-space-md;
 		max-width: calc( 100% - ( #{$x-space-sm} * 2 ) );
 
 		@include media( tablet ) {
 			max-width: $x-grid-column-7;
-			margin-right: auto;
-			margin-left: auto;
+			margin: $x-space-md auto;
 		}
 
 		.author-avatar {
@@ -341,7 +349,6 @@
 		}
 
 		.entry-meta {
-			display: flex;
 			justify-content: space-between;
 
 			a {
@@ -356,6 +363,7 @@
 			}
 
 			@include media( tablet ) {
+				display: flex;
 				width: $x-grid-column-7;
 				margin: $x-space-sm auto;
 				flex-direction: column;
@@ -399,6 +407,12 @@
 
 		@include media( tablet ) {
 
+			.entry-title {
+				margin: $x-space-sm auto;
+				margin-top: 0;
+				width: auto;
+			}
+
 			.entry-footer .entry-meta {
 
 				flex-direction: row;
@@ -440,13 +454,6 @@
 				display: block;
 				flex: 1 1 40%;
 				margin: 0;
-			}
-
-			.entry-title {
-
-				margin: $x-space-sm auto;
-				margin-top: 0;
-				width: auto;
 			}
 
 			.entry-summary {
