--- a/stylesheets/_site-branding.scss
+++ b/stylesheets/_site-branding.scss
@@ -21,14 +21,14 @@
 .site-identity {
 
 	color: $x-color-words-subtle;
-	margin: $x-space-md 0;
+	margin: $x-space-sm;
 	
 	@include media( tablet ) {
 		margin: $x-space-md;
 	}
 
 	& > * {
-		margin-bottom: $x-space-md;
+		margin-bottom: $x-space-xs;
 
 		&:first-child {
 			margin-top: 0;
@@ -104,9 +104,7 @@
 
 	font-size: $x-font-size-sm;
 	font-family: $x-font-family-body;
-	padding: $x-space-lg;
-	padding-left: $x-space-sm;
-	padding-right: $x-space-sm;
+	padding: $x-space-sm;
 
 	a {
 		color: inherit;
@@ -124,6 +122,7 @@
 		justify-content: space-between;
 		margin-left: auto;
 		margin-right: auto;
+		padding: $x-space-lg $x-space-sm;
 	}
 }
 
