--- a/stylesheets/_forms.scss
+++ b/stylesheets/_forms.scss
@@ -41,8 +41,7 @@ input[type="reset"]:active,
 input[type="reset"]:focus,
 input[type="submit"]:active,
 input[type="submit"]:focus {
-	background-color: $x-color-shade-white;
-	color: $x-color-words-subtle;
+	background-color: $x-color-accent-light;
 }
 
 input[type="text"],
