Remove bad parent selector.

--- a/stylesheets/_entries.scss
+++ b/stylesheets/_entries.scss
@@ -24,7 +24,7 @@
 }
 
 .infinite-wrap .hentry:first-child,
-.single &.has-post-thumbnail:first-child,
+.single .has-post-thumbnail:first-child,
 .page .has-post-thumbnail.hentry {
 	margin-top: 0;
 }
