--- a/stylesheets/_site-branding.scss
+++ b/stylesheets/_site-branding.scss
@@ -7,10 +7,9 @@
 	border-bottom-color: $x-color-border-base;
 
 	.site-header-wrapper {
-		@include media( desktop ) {
+		@include media( tablet ) {
 			max-width: $x-grid-column-12;
-	/*		border-bottom: none;
-	*/		display: flex;
+			display: flex;
 			align-items: center;
 			margin-left: auto;
 			margin-right: auto;
