Adjust the featured image size.

--- a/stylesheets/_entries.scss
+++ b/stylesheets/_entries.scss
@@ -48,8 +48,7 @@
 		background-size: cover;
 		background-position: 50% 50%;
 		display: block;
-		min-height: 270px;
-		max-height: 684px;
+		min-height: 60vh;
 		overflow: hidden;
 		position: relative;
 		width: 100%;
